fix with slogan and title.Our template is according to hero

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body class="landing">
 
-		<!-- Page Wrapper -->
+		<!-- Right sidebar: -->
 			<div id="page-wrapper">
 
 				<!-- Header -->
@@ -24,8 +24,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="generic.html">About</a></li>
+											<li><a href="elements.html">Contact</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
@@ -39,9 +39,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>piece of help</h2>
-							<p>集結力量，達成目的<br></p>
+							<p>集結所有人力量，幫助每個需要的角落<br></p>
 							<ul class="actions">
-								<li><a href="#" class="button special">start!</a></li>
+								<li><a href="188.166.220.35/home" class="button special">start!</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">看更多</a>
@@ -51,10 +51,8 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>我們總有孤單軟弱的時候，到各大社群苦苦的尋求幫助</h2>
+								<p>我們幫你找到<br>從天降下的善心人士、一個堅定無比的答案、做你最應時的幫助!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
